plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.9'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'jongbum'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Swagger UI를 사용하기 위한 의존성을 추가합니다.
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

	// Spring Data JPA 스타터 의존성을 추가합니다.
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Import TestContainer for JUnit 5
	// 임시 MySQL 컨테이너를 생성하여 유닛테스트를 수행하기 위한 의존성을 추가합니다.
	testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
	testImplementation 'org.testcontainers:testcontainers:1.20.1'
	testImplementation 'org.testcontainers:mysql:1.20.1'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()

	testLogging {
		events "passed", "skipped", "failed"
		outputs.upToDateWhen { false }
		jvmArgs '-XX:+EnableDynamicAgentLoading'
	}
}

spotless {
	java {
		googleJavaFormat('1.22.0').aosp().reflowLongStrings()
	}
}

build.dependsOn 'spotlessApply'